From style updates to align asterisk and fix the overlap on the beta form
- On beta forms, the input label and asterisk would overlap on screen widths ~320px
- Also reverting the npm test script change since it wasn't really necessary

--- a/assets/styles/components/beta-signup-form.less
+++ b/assets/styles/components/beta-signup-form.less
@@ -25,7 +25,7 @@
 
   .form-control[value=""] + label + .required-asterisk {
     font-size: 24px;
-    top: 20px;
+    top: 18px;
   }
 
   .form-control:focus + label + .required-asterisk {
@@ -51,6 +51,12 @@
   .FormField:last-child .form-field {
     margin-left: 10px;
     margin-right: 0;
+  }
+
+  @media (max-width: 400px) {
+    .form-control + label + .required-asterisk {
+      right: 10px;
+    }
   }
 
 }
