--- a/assets/styles/shine.less
+++ b/assets/styles/shine.less
@@ -111,7 +111,7 @@ h2 {
     color: @color-form-primary;
     font-size: @font-size-subtitle;
     position: absolute;
-    top: 20px;
+    top: 18px;
     right: 20px;
   }
 }
